cambié las imágenes

--- a/paginas/nota-tops.html
+++ b/paginas/nota-tops.html
@@ -70,7 +70,7 @@
         <ol>
             <li>
                 <h3 class="titulo">Goat Simulator</h3>
-                <img class="foto" src="../css/goat-simulator.jpg" alt="Portada de Goat Simulator">
+                <img class="foto" src="../imagenes/goat-simulator.png" alt="Portada de Goat Simulator">
                 <p> Probablemente el simulador más conocido dentro de esta lista. Saltó a la fama en 2014 por su
                     particular premisa, el jugador encarna una cabra cuyo objetivo es causar la mayor cantidad de
                     destrozos posible e, incluso, golpeando humanos. También se pueden hacer acrobacias, andar en
@@ -81,7 +81,7 @@
             </li>
             <li>
                <h3 class="titulo">Hatoful Boyfriend</h3> 
-                <img class="foto" src="../css/Hatoful-Boyfriend.jpg" alt="Portada de Hatoful Boyfriend">
+                <img class="foto" src="../imagenes/hatoful-boyfriend.png" alt="Portada de Hatoful Boyfriend">
                 <p>
                     Hatoful Boyfriend, también conocido como Pigeon Dating Simulator, es una novela visual japonesa en
                     la cual el jugador toma control de una humana que fue recientemente aceptada en el prestigioso
@@ -95,7 +95,7 @@
             </li>
             <li>
                 <h3 class="titulo">Adolf Hitler Humiliation Simulator</h3>
-                <img class="foto" src="../css/Hitler-Simulator.jpg" alt="Portada de Adolf Hitler Humiliation Simulator">
+                <img class="foto" src="../imagenes/hitler-simulator.png" alt="Portada de Adolf Hitler Humiliation Simulator">
                 <p>
                     Tal y como su nombre dice, el objetivo de este bizarro simulador es humillar al líder del Tercer
                     Reich. Su principal método de humillación es orinar encima del Führer desde varios ángulos y
@@ -105,7 +105,7 @@
             </li>
             <li>
                 <h3 class="titulo">Tree Simulator</h3>
-                <img class="foto" src="../css/Tree-Simulator.jpg" alt="Árbol dentro del juego">
+                <img class="foto" src="../imagenes/tree-simulator.png" alt="Árbol dentro del juego">
                 <p>
                     En este simulador somos literalmente un árbol. Su objetivo es relajarse y desfrutar de ser un árbol
                     mientras pasa el tiempo. Existen distintos tipos de árboles que el jugador puede elegir. Algo para
@@ -117,7 +117,7 @@
             </li>
             <li>
                 <h3 class="titulo">Sitting Simulator</h3>
-                <img class="foto" src="../css/Sitting-Simulator.jpg" alt="Menú Sitting Simulator">
+                <img class="foto" src="../imagenes/sitting-simulator.png" alt="Menú Sitting Simulator">
                 <p>
                     Al igual que con el Tree Simulator, el Sitting Simulator cuenta con 2 versiones diferentes en Steam,
                     la de 2014 y la de 2015. En este simulador el objetivo del jugador será sentarse, las opciones de
