Arreglé la imagen

--- a/paginas/entrevista-toscano.html
+++ b/paginas/entrevista-toscano.html
@@ -61,7 +61,7 @@
   <main>
     <h1 class="titulo">Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década
       pasada</h1>
-    <img class="foto" src="../css/pablotoscano.png" alt="Foto Pablo Toscano">
+    <img class="foto" src="../imagenes/pablo-toscano.png" alt="Foto Pablo Toscano">
     <p class="epigrafe">Pablo Toscano se fue de Argentina en 2003 hacia Quebec, donde comenzó a trabajar en la
       compañía Frima
       Studios. Posteriormente, se unió al grupo de trabajo de Ubisoft Quebec, donde desarrolló uno de los juegos
