--- a/paginas/nota-boxeo.html
+++ b/paginas/nota-boxeo.html
@@ -60,7 +60,7 @@
     </nav>
     <main>
         <h1 class="titulo">Almagro Boxing Club: una verdadera cuna de campeones</h1>
-        <img class="foto" src="../css/almagro-boxing.png" alt="Entrada de Almagro Boxing Club">
+        <img class="foto" src="../imagenes/almagro-boxing.png" alt="Entrada de Almagro Boxing Club">
         <p class="epigrafe">Almagro Boxing Club fue el primer gimnasio de boxeo en Argentina. De él salieron grandes campeones, tanto
             olímpicos como mundiales.
         </p>
