--- a/paginas/nota-gardel.html
+++ b/paginas/nota-gardel.html
@@ -61,7 +61,7 @@
     </nav>
     <main>
         <h1 class="titulo">La casa del tango</h1>
-        <img class="foto" src="../css/casa-gardel.png" alt="Entrada del museo Casa Carlos Gardel">
+        <img class="foto" src="../imagenes/casa-gardel.png" alt="Entrada del museo Casa Carlos Gardel">
         <p class="creditos">Por: Tomás Aronna San Martín</p>
         <p>
             Un recorrido por la casa de uno de los máximos exponentes del tango, Carlos Gardel, tras su
