--- a/paginas/nota-siria.html
+++ b/paginas/nota-siria.html
@@ -60,7 +60,7 @@
     </nav>
     <main>
         <h1 class="titulo">La guerra en Siria</h1>
-        <img class="foto" src="../css/guerra-siria.png" alt="Una ciudad en Siria totalmente destruída">
+        <img class="foto" src="../imagenes/guerra-siria.png" alt="Una ciudad en Siria totalmente destruída">
         <p class="epigrafe">
             El conflicto bélico en Siria parece no tener fin tras 10 años de enfrentamiento.
         </p>
