--- a/paginas/nota-arsenico.html
+++ b/paginas/nota-arsenico.html
@@ -26,39 +26,39 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle menu" href="#" id="navbarDropdown" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Tecnología
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="../paginas/entrevistas.html">Entrevistas</a></li>
-                        <li><a class="dropdown-item" href="../paginas/tops.html">Tops</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item menu">
-                    <a class="nav-link" href="../paginas/sociedad.html" tabindex="-1" aria-disabled="true">Sociedad</a>
-                </li>
-                <li class="nav-item menu">
-                    <a class="nav-link" href="../paginas/cultura.html" tabindex="-1" aria-disabled="true">Cultura</a>
-                </li>
-                <li class="nav-item menu">
-                    <a class="nav-link" href="../paginas/deportes.html" tabindex="-1" aria-disabled="true">Deportes</a>
-                </li>
-                <li class="nav-item menu">
-                    <a class="nav-link" href="../paginas/contacto.html" tabindex="-1" aria-disabled="true">Contacto</a>
-                </li>
-            </ul>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle menu" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Tecnología
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="./paginas/entrevistas.html">Entrevistas</a></li>
+                <li><a class="dropdown-item" href="./paginas/tops.html">Tops</a></li>
+              </ul>
+            </li>
+            <li class="nav-item menu">
+              <a class="nav-link" href="./paginas/sociedad.html" tabindex="-1" aria-disabled="true">Sociedad</a>
+            </li>
+            <li class="nav-item menu">
+              <a class="nav-link" href="./paginas/cultura.html" tabindex="-1" aria-disabled="true">Cultura</a>
+            </li>
+            <li class="nav-item menu">
+              <a class="nav-link" href="./paginas/deportes.html" tabindex="-1" aria-disabled="true">Deportes</a>
+            </li>
+            <li class="nav-item menu">
+              <a class="nav-link" href="./paginas/contacto.html" tabindex="-1" aria-disabled="true">Contacto</a>
+            </li>
+          </ul>
         </div>
-    </nav>
+      </nav>
     <main>
         <h6 class="encabezado">Especial de investigación</h6>
         <h1 class="titulo">Arsénico en el agua, una problemática común en muchas ciudades argentinas</h1>
@@ -398,7 +398,12 @@
             </a>
         </div>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
+    integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
+    integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
