Englobé las cards en un section

--- a/paginas/cultura.html
+++ b/paginas/cultura.html
@@ -60,12 +60,20 @@
       </ul>
     </div>
   </nav>
-  <article class="nota__gardel">
-    <img class="foto__gardel" src="../Imagenes/museo_casa_carlos_gardel_9.jpg" alt="MuseoCasaCarlosGardel">
-    <h1>La casa del tango</h1>
-    <p>Un recorrido por la casa de uno de los máximos exponentes del tango, Carlos Gardel, tras su
-      reapertura.</p>
-  </article>
+  <section>
+    <a href="./paginas/nota-gardel.html" class="animate__animated animate__fadeIn  wow">
+      <div class="card nota__gardel">
+        <div class="card-img-overlay">
+          <div class="card-text">
+            <h2>La casa del tango</h2>
+            <p>Un recorrido por la casa de uno de los máximos exponentes del tango, Carlos Gardel, tras su
+              reapertura.
+            </p>
+          </div>
+        </div>
+      </div>
+    </a>
+  </section>
   <footer>
     <div class="footloose">
       <p>Indie Post, un medio creado por un periodista independiente.</p>
