--- a/paginas/deportes.html
+++ b/paginas/deportes.html
@@ -62,12 +62,18 @@
       </ul>
     </div>
   </nav>
-  <article class="nota__almagro">
-    <img class="foto__gimnasio" src="../Imagenes/Almagro.jpg" alt="gimnasio">
-    <h1>Almagro Boxing Club: una verdadera cuna de campeones</h1>
-    <p>Almagro Boxing Club fue el primer gimnasio de boxeo en Argentina. De él salieron grandes campeones, tanto
-      olímpicos como mundiales.</p>
-  </article>
+  <a href="./paginas/nota-boxeo.html" class="animate__animated animate__fadeIn  wow">
+    <div class="card nota__boxeo">
+      <div class="card-img-overlay">
+        <div class="card-text">
+          <h1>Almagro Boxing Club: una verdadera cuna de campeones</h1>
+          <p>Almagro Boxing Club fue el primer gimnasio de boxeo en Argentina. De él salieron grandes campeones, tanto
+            olímpicos como mundiales.
+          </p>
+        </div>
+      </div>
+    </div>
+  </a>
   <footer>
     <div class="footloose">
       <p>Indie Post, un medio creado por un periodista independiente.</p>
