--- a/paginas/entrevistas.html
+++ b/paginas/entrevistas.html
@@ -60,21 +60,23 @@
       </ul>
     </div>
   </nav>
-  <a href="../paginas/entrevista-toscano.html" class="animate__animated animate__fadeIn  wow">
-    <div class="card nota__toscano">
-      <div class="card-img-overlay">
-        <div class="card-text">
-          <h1>Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década pasada
-          </h1>
-          <p>Pablo Toscano se fue de Argentina en 2003 hacia Quebec, donde comenzó a trabajar en la
-            compañía Frima
-            Studios. Posteriormente, se unió al grupo de trabajo de Ubisoft Quebec, donde desarrolló uno de los juegos
-            más importantes del 2018, el Assassin’s Creed Odyssey.
-          </p>
+  <section>
+    <a href="../paginas/entrevista-toscano.html" class="animate__animated animate__fadeIn  wow">
+      <div class="card nota__toscano">
+        <div class="card-img-overlay">
+          <div class="card-text">
+            <h1>Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década pasada
+            </h1>
+            <p>Pablo Toscano se fue de Argentina en 2003 hacia Quebec, donde comenzó a trabajar en la
+              compañía Frima
+              Studios. Posteriormente, se unió al grupo de trabajo de Ubisoft Quebec, donde desarrolló uno de los juegos
+              más importantes del 2018, el Assassin’s Creed Odyssey.
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-  </a>
+    </a>
+  </section>
   <footer>
     <div class="footloose">
       <p>Indie Post, un medio creado por un periodista independiente.</p>
