--- a/paginas/sociedad.html
+++ b/paginas/sociedad.html
@@ -58,20 +58,22 @@
       </ul>
     </div>
   </nav>
-  <a href="../paginas/nota-arsenico.html" class="animate__animated animate__fadeIn  wow">
-    <div class="card nota__arsenico">
-      <div class="card-img-overlay">
-        <div class="card-text">
-          <h1>Arsénico en el agua, una problemática común en muchas ciudades argentinas</h1>
-          <p>El agua es vital para el cuerpo humano pero, desde hace muchos años, en varias ciudades como Carlos
-            Casares y
-            Pehuajó, entre otras, sale totalmente contaminada por arsénico, un elemento químico altamente
-            tóxico.
-          </p>
+  <section>
+    <a href="../paginas/nota-arsenico.html" class="animate__animated animate__fadeIn  wow">
+      <div class="card nota__arsenico">
+        <div class="card-img-overlay">
+          <div class="card-text">
+            <h1>Arsénico en el agua, una problemática común en muchas ciudades argentinas</h1>
+            <p>El agua es vital para el cuerpo humano pero, desde hace muchos años, en varias ciudades como Carlos
+              Casares y
+              Pehuajó, entre otras, sale totalmente contaminada por arsénico, un elemento químico altamente
+              tóxico.
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-  </a>
+    </a>
+  </section>
   <footer>
     <div class="footloose">
       <p>Indie Post, un medio creado por un periodista independiente.</p>
