--- a/paginas/tops.html
+++ b/paginas/tops.html
@@ -58,19 +58,21 @@
       </ul>
     </div>
   </nav>
-  <a href="../paginas/nota-tops.html" class="animate__animated animate__fadeIn  wow">
-    <div class="card nota__tops">
-      <div class="card-img-overlay">
-        <div class="card-text">
-          <h1>Los simuladores más extraños en el mundo de los videojuegos</h1>
-          <p>En la industria de los videojuegos existen simuladores de todo tipo, simuladores de vida como "Los Sims",
-            de deportes como el "Fifa", de
-            carreras como las franquicias "Forza" y "Gran Turismo", pero también existen algunos más insólitos. Este
-            es un recorrido por los 5 simuladores más extraños en los videojuegos.</p>
+  <section>
+    <a href="../paginas/nota-tops.html" class="animate__animated animate__fadeIn  wow">
+      <div class="card nota__tops">
+        <div class="card-img-overlay">
+          <div class="card-text">
+            <h1>Los simuladores más extraños en el mundo de los videojuegos</h1>
+            <p>En la industria de los videojuegos existen simuladores de todo tipo, simuladores de vida como "Los Sims",
+              de deportes como el "Fifa", de
+              carreras como las franquicias "Forza" y "Gran Turismo", pero también existen algunos más insólitos. Este
+              es un recorrido por los 5 simuladores más extraños en los videojuegos.</p>
+          </div>
         </div>
       </div>
-    </div>
-  </a>
+    </a>
+  </section>
   <footer>
     <div class="footloose">
       <p>Indie Post, un medio creado por un periodista independiente.</p>
