Arreglé el link

--- a/paginas/cultura.html
+++ b/paginas/cultura.html
@@ -61,7 +61,7 @@
     </div>
   </nav>
   <section>
-    <a href="./paginas/nota-gardel.html" class="animate__animated animate__fadeIn  wow">
+    <a href="../paginas/nota-gardel.html" class="animate__animated animate__fadeIn  wow">
       <div class="card nota__gardel">
         <div class="card-img-overlay">
           <div class="card-text">
