Agregué un section y la clase secciones

--- a/paginas/cultura.html
+++ b/paginas/cultura.html
@@ -60,7 +60,7 @@
       </ul>
     </div>
   </nav>
-  <section>
+  <section class="secciones">
     <a href="../paginas/nota-gardel.html" class="animate__animated animate__fadeIn  wow">
       <div class="card nota__gardel">
         <div class="card-img-overlay">
