--- a/paginas/entrevistas.html
+++ b/paginas/entrevistas.html
@@ -60,7 +60,7 @@
       </ul>
     </div>
   </nav>
-  <section>
+  <section class="secciones">
     <a href="../paginas/entrevista-toscano.html" class="animate__animated animate__fadeIn  wow">
       <div class="card nota__toscano">
         <div class="card-img-overlay">
