--- a/paginas/sociedad.html
+++ b/paginas/sociedad.html
@@ -58,7 +58,7 @@
       </ul>
     </div>
   </nav>
-  <section>
+  <section class="secciones">
     <a href="../paginas/nota-arsenico.html" class="animate__animated animate__fadeIn  wow">
       <div class="card nota__arsenico">
         <div class="card-img-overlay">
