--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -12,12 +12,10 @@
       content="Indie, periodismo, independiente, periodismo independiente, contacto, formulario, formulario de contacto">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="../css/Archivo.css"> -->
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/Normalize.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="icon" href="../imagenes/logo.png">
+    <link rel="icon" href="../imagenes/favicon-32x32.png">
     <title>Indie Post - Contacto</title>
   </head>
 </head>
