--- a/paginas/entrevista-toscano.html
+++ b/paginas/entrevista-toscano.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="css/animate.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
-  <link rel="icon" href="../imagenes/logo.png">
+  <link rel="icon" href="../imagenes/favicon-32x32.png">
   <link rel="stylesheet" href="../css/style.css">
   <title>Indie Post - Entrevista con Pablo Toscano</title>
 </head>
