--- a/paginas/sociedad.html
+++ b/paginas/sociedad.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="../css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
-  <link rel="icon" href="../Imagenes/logo.png">
+  <link rel="icon" href="../imagenes/favicon-32x32.png">
   <title>Indie Post - Sociedad</title>
 </head>
 
