--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -75,12 +75,10 @@
     <input type="text">
     <br>
     <br>
-    <textarea name="Consulta" id="Consulta" cols="100" rows="12" placeholder="Escriba su consulta aquí" required>
-
-            </textarea>
+    <textarea name="Consulta" id="Consulta" cols="100" rows="12" placeholder="Escriba su consulta aquí" required></textarea>
     <br>
     <br>
-    Provincia
+    <label for="text">Provincia</label>
     <select name="Provincia" id="Provincia">
       <option value="Buenos Aires">Buenos Aires</option>
       <option value="Capital Federal">Capital Federal</option>
