--- a/paginas/cultura.html
+++ b/paginas/cultura.html
@@ -78,18 +78,21 @@
       <p>Todos los derechos reservados</p>
     </div>
     <div class="redes">
-      <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook"
-          src="../imagenes/iconos/iconofacebook.png" alt="facebook">
-      </a>
-      <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram"
-          src="../imagenes/iconos/iconoinstagram.png" alt="instagram">
-      </a>
-      <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter"
-          src="../imagenes/iconos/iconotwitter.png" alt="twitter">
-      </a>
-      <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="../imagenes/Iconos/iconowhatsapp.png"
-          alt="IconoWhatsapp">
-      </a>
+      <h6 class="redes__footer">Redes</h6>
+      <a class="red" href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img class="red-social"
+        src="../imagenes/iconos/iconofacebook.png" alt="facebook"></a>
+      <a class="red" href="https://www.instagram.com/tomasaronna/" target="blank"><img class="red-social"
+        src="../imagenes/iconos/iconoinstagram.png" alt="instagram"></a>
+      <a class="red" href="https://twitter.com/TomasAronna" target="blank"><img class="red-social"
+        src="../imagenes/iconos/iconotwitter.png" alt="twitter"></a>
+      <a class="red" href="https://wa.me/541164496877" target="blank"><img class="red-social" src="../imagenes/iconos/iconowhatsapp.png"
+        alt="IconoWhatsapp"></a>
+    </div>
+    <div class="buscador">
+      <form class="form-inline my-2 my-lg-0 barra__busqueda">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0 boton__busqueda" type="submit">Search</button>
+      </form>
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
