Cambié el footer y agregué una card

--- a/paginas/sociedad.html
+++ b/paginas/sociedad.html
@@ -58,7 +58,7 @@
       </ul>
     </div>
   </nav>
-  <section class="secciones">
+  <section class="secciones grid-container">
     <a href="../paginas/nota-arsenico.html" class="animate__animated animate__fadeIn  wow">
       <div class="card nota__arsenico">
         <div class="card-img-overlay">
@@ -73,6 +73,16 @@
         </div>
       </div>
     </a>
+    <a href="../paginas/nota-siria.html" class="animate__animated animate__fadeIn  wow">
+      <div class="card nota__siria">
+        <div class="card-img-overlay">
+          <div class="card-text">
+            <h2>La guerra en Siria</h2>
+            <p>El conflicto bélico en Siria parece no tener fin tras 10 años de enfrentamiento.</p>
+          </div>
+        </div>
+      </div>
+    </a>
   </section>
   <footer>
     <div class="footloose">
@@ -80,18 +90,21 @@
       <p>Todos los derechos reservados</p>
     </div>
     <div class="redes">
-      <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook"
-          src="../imagenes/iconos/iconofacebook.png" alt="facebook">
-      </a>
-      <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram"
-          src="../imagenes/iconos/iconoinstagram.png" alt="instagram">
-      </a>
-      <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter"
-          src="../imagenes/iconos/iconotwitter.png" alt="twitter">
-      </a>
-      <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="../imagenes/Iconos/iconowhatsapp.png"
-          alt="IconoWhatsapp">
-      </a>
+      <h6 class="redes__footer">Redes</h6>
+      <a class="red" href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img class="red-social"
+        src="../imagenes/iconos/iconofacebook.png" alt="facebook"></a>
+      <a class="red" href="https://www.instagram.com/tomasaronna/" target="blank"><img class="red-social"
+        src="../imagenes/iconos/iconoinstagram.png" alt="instagram"></a>
+      <a class="red" href="https://twitter.com/TomasAronna" target="blank"><img class="red-social"
+        src="../imagenes/iconos/iconotwitter.png" alt="twitter"></a>
+      <a class="red" href="https://wa.me/541164496877" target="blank"><img class="red-social" src="../imagenes/iconos/iconowhatsapp.png"
+        alt="IconoWhatsapp"></a>
+    </div>
+    <div class="buscador">
+      <form class="form-inline my-2 my-lg-0 barra__busqueda">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0 boton__busqueda" type="submit">Search</button>
+      </form>
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
