Borré unas clases innecesarias

--- a/paginas/sociedad.html
+++ b/paginas/sociedad.html
@@ -59,7 +59,7 @@
     </div>
   </nav>
   <section class="secciones grid-container">
-    <a href="../paginas/nota-arsenico.html" class="animate__animated animate__fadeIn  wow">
+    <a href="../paginas/nota-arsenico.html">
       <div class="card nota__arsenico">
         <div class="card-img-overlay">
           <div class="card-text">
@@ -73,7 +73,7 @@
         </div>
       </div>
     </a>
-    <a href="../paginas/nota-siria.html" class="animate__animated animate__fadeIn  wow">
+    <a href="../paginas/nota-siria.html">
       <div class="card nota__siria">
         <div class="card-img-overlay">
           <div class="card-text">
