Borré clases innecesarias

--- a/paginas/cultura.html
+++ b/paginas/cultura.html
@@ -59,7 +59,7 @@
     </div>
   </nav>
   <section class="secciones">
-    <a href="../paginas/nota-gardel.html" class="animate__animated animate__fadeIn  wow">
+    <a href="../paginas/nota-gardel.html">
       <div class="card nota__gardel">
         <div class="card-img-overlay">
           <div class="card-text">
