--- a/paginas/deportes.html
+++ b/paginas/deportes.html
@@ -61,7 +61,7 @@
     </div>
   </nav>
   <section class="secciones">
-    <a href="../paginas/nota-boxeo.html" class="animate__animated animate__fadeIn  wow">
+    <a href="../paginas/nota-boxeo.html">
       <div class="card nota__boxeo">
         <div class="card-img-overlay">
           <div class="card-text">
