--- a/paginas/entrevistas.html
+++ b/paginas/entrevistas.html
@@ -59,7 +59,7 @@
     </div>
   </nav>
   <section class="secciones">
-    <a href="../paginas/entrevista-toscano.html" class="animate__animated animate__fadeIn  wow">
+    <a href="../paginas/entrevista-toscano.html">
       <div class="card nota__toscano">
         <div class="card-img-overlay">
           <div class="card-text">
