--- a/paginas/tops.html
+++ b/paginas/tops.html
@@ -58,7 +58,7 @@
     </div>
   </nav>
   <section class="secciones">
-    <a href="../paginas/nota-tops.html" class="animate__animated animate__fadeIn  wow">
+    <a href="../paginas/nota-tops.html">
       <div class="card nota__tops">
         <div class="card-img-overlay">
           <div class="card-text">
