--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             Tecnología
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="./paginas/entrevistas.html">Entrevistas</a></li>
-            <li><a class="dropdown-item" href="./paginas/tops.html">Tops</a></li>
+            <li><a class="dropdown-item nav-link" href="./paginas/entrevistas.html">Entrevistas</a></li>
+            <li><a class="dropdown-item nav-link" href="./paginas/tops.html">Tops</a></li>
           </ul>
         </li>
         <li class="nav-item menu">
@@ -212,8 +212,10 @@
     </div>
     <div class="buscador">
       <form class="form-inline my-2 my-lg-0 barra__busqueda">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0 boton__busqueda" type="submit">Search</button>
+        <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Search">
+        <a href="./paginas/404.html">
+          <button class="btn btn-outline-success my-2 my-sm-0 boton__busqueda" type="button">Buscar</button>
+        </a>
       </form>
     </div>
   </footer>
