Le di estilos al 404

--- a/paginas/404.html
+++ b/paginas/404.html
@@ -57,10 +57,10 @@
             </ul>
         </div>
     </nav>
-    <main class="not-found">
+    <main>
         <h1 class="error">No se pudo encontrar la página</h1>
-        <a class="link" href="../paginas/index.html">
-            <p class="volver">Volver a la página principal</p>
+        <a class="link" href="../index.html">
+            <input class="boton" type="button" name="volver" value="Volver al inicio">
         </a>
     </main>
     <footer>
