Modifiqué el footer

--- a/paginas/nota-tops.html
+++ b/paginas/nota-tops.html
@@ -144,11 +144,13 @@
             alt="IconoWhatsapp"></a>
         </div>
         <div class="buscador">
-          <form class="form-inline my-2 my-lg-0 barra__busqueda">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0 boton__busqueda" type="submit">Search</button>
-          </form>
-        </div>
+            <form class="form-inline my-2 my-lg-0 barra__busqueda">
+              <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Search">
+              <a href="../paginas/404.html">
+                <button class="btn btn-outline-success my-2 my-sm-0 boton__busqueda" type="button">Buscar</button>
+              </a>
+            </form>
+          </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
     integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
