--- a/paginas/nota-gardel.html
+++ b/paginas/nota-gardel.html
@@ -125,11 +125,11 @@
         <div class="buscador">
             <form class="form-inline my-2 my-lg-0 barra__busqueda">
               <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Search">
-              <a href="../paginas/404.html">
+              <a class="error" href="./paginas/404.html">
                 <button class="btn btn-outline-success my-2 my-sm-0 boton__busqueda" type="button">Buscar</button>
               </a>
             </form>
-          </div>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
