Cambié la imagen del carrusel de casares

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
         <div class="carousel-item">
           <a href="./paginas/nota-arsenico.html">
-            <img src="./imagenes/casares.png" class="d-block w-100 notas" alt="Entrada Carlos Casares">
+            <img src="./imagenes/casares-carrusel.png" class="d-block w-100 notas" alt="Entrada Carlos Casares">
           </a>
           <div class="carousel-caption d-none d-md-block texto__carrusel">
             <h5>Arsénico en el agua, una problemática común en muchas ciudades argentinas</h5>
