--- a/paginas/nota-boxeo.html
+++ b/paginas/nota-boxeo.html
@@ -38,8 +38,8 @@
                         Tecnología
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="../paginas/entrevistas.html">Entrevistas</a></li>
-                        <li><a class="dropdown-item" href="../paginas/tops.html">Tops</a></li>
+                        <li><a class="dropdown-item nav-link" href="../paginas/entrevistas.html">Entrevistas</a></li>
+                        <li><a class="dropdown-item nav-link" href="../paginas/tops.html">Tops</a></li>
                     </ul>
                 </li>
                 <li class="nav-item menu">
