Arreglé el formulario de contacto

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -75,7 +75,8 @@
     <input type="text">
     <br>
     <br>
-    <textarea name="Consulta" id="Consulta" cols="100" rows="12" placeholder="Escriba su consulta aquí" required></textarea>
+    <textarea name="Consulta" id="Consulta" cols="100" rows="12" placeholder="Escriba su consulta aquí"
+      required></textarea>
     <br>
     <br>
     <label for="text">Provincia</label>
@@ -129,13 +130,13 @@
     <div class="redes">
       <h6 class="redes__footer">Redes</h6>
       <a class="red" href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img class="red-social"
-        src="../imagenes/iconos/iconofacebook.png" alt="facebook"></a>
+          src="../imagenes/iconos/iconofacebook.png" alt="facebook"></a>
       <a class="red" href="https://www.instagram.com/tomasaronna/" target="blank"><img class="red-social"
-        src="../imagenes/iconos/iconoinstagram.png" alt="instagram"></a>
+          src="../imagenes/iconos/iconoinstagram.png" alt="instagram"></a>
       <a class="red" href="https://twitter.com/TomasAronna" target="blank"><img class="red-social"
-        src="../imagenes/iconos/iconotwitter.png" alt="twitter"></a>
-      <a class="red" href="https://wa.me/541164496877" target="blank"><img class="red-social" src="../imagenes/iconos/iconowhatsapp.png"
-        alt="IconoWhatsapp"></a>
+          src="../imagenes/iconos/iconotwitter.png" alt="twitter"></a>
+      <a class="red" href="https://wa.me/541164496877" target="blank"><img class="red-social"
+          src="../imagenes/iconos/iconowhatsapp.png" alt="IconoWhatsapp"></a>
     </div>
     <div class="buscador">
       <form class="form-inline my-2 my-lg-0 barra__busqueda">
