--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -141,7 +141,7 @@
     <div class="buscador">
       <form class="form-inline my-2 my-lg-0 barra__busqueda">
         <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Search">
-        <a class="error" href="./paginas/404.html">
+        <a class="error" href="../paginas/404.html">
           <button class="btn btn-outline-success my-2 my-sm-0 boton__busqueda" type="button">Buscar</button>
         </a>
       </form>
